# test-rust-macros

./: Cargo.toml  README.md  infer.json  test.json  workspace.code-workspace
.cargo/: config
log/: main-expanded.rs
scripts/: expand-macros.sh
src/: main.rs
